--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1",
   "description": "Demo app for Pluralsight Docker CI course",
   "main": "app.js",
+  "scripts": {
+    "test": "./node_modules/.bin/mocha --reporter spec"
+  },
   "author": "Nigel Poulton <nigelpoulton@hotmail.com>",
   "license": "You'd have to be mad to use this in production :-D",
   "dependencies": {
